feature: javac plugin for token replacements in java source files